bynkc/tests/fixtures/positive/817_locale_bundle_wrapper_e2e/src/app/web.bynk
context app.web

consumes bynk { Locale }
uses bynk.locale.types
uses app.bundle

service greeting {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(greet(tag))
  }
}
