bynkc/tests/fixtures/negative/496_locale_multiple_message_bundles/src/web.bynk
context web

consumes bynk { Locale }
uses msgs_a
uses msgs_b

service api {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(tag)
  }
}
